src/parser/LuaParser.ts
// Generated from LuaParser.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import LuaParserListener from "./LuaParserListener.js";
import LuaParserVisitor from "./LuaParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class LuaParser extends Parser {
	public static readonly SEMI = 1;
	public static readonly EQ = 2;
	public static readonly BREAK = 3;
	public static readonly GOTO = 4;
	public static readonly DO = 5;
	public static readonly END = 6;
	public static readonly WHILE = 7;
	public static readonly REPEAT = 8;
	public static readonly UNTIL = 9;
	public static readonly IF = 10;
	public static readonly THEN = 11;
	public static readonly ELSEIF = 12;
	public static readonly ELSE = 13;
	public static readonly FOR = 14;
	public static readonly COMMA = 15;
	public static readonly IN = 16;
	public static readonly FUNCTION = 17;
	public static readonly LOCAL = 18;
	public static readonly LT = 19;
	public static readonly GT = 20;
	public static readonly RETURN = 21;
	public static readonly CC = 22;
	public static readonly NIL = 23;
	public static readonly FALSE = 24;
	public static readonly TRUE = 25;
	public static readonly DOT = 26;
	public static readonly SQUIG = 27;
	public static readonly MINUS = 28;
	public static readonly POUND = 29;
	public static readonly OP = 30;
	public static readonly CP = 31;
	public static readonly NOT = 32;
	public static readonly LL = 33;
	public static readonly GG = 34;
	public static readonly AMP = 35;
	public static readonly SS = 36;
	public static readonly PER = 37;
	public static readonly COL = 38;
	public static readonly LE = 39;
	public static readonly GE = 40;
	public static readonly AND = 41;
	public static readonly OR = 42;
	public static readonly PLUS = 43;
	public static readonly STAR = 44;
	public static readonly OCU = 45;
	public static readonly CCU = 46;
	public static readonly OB = 47;
	public static readonly CB = 48;
	public static readonly EE = 49;
	public static readonly DD = 50;
	public static readonly PIPE = 51;
	public static readonly CARET = 52;
	public static readonly SLASH = 53;
	public static readonly DDD = 54;
	public static readonly SQEQ = 55;
	public static readonly NAME = 56;
	public static readonly NORMALSTRING = 57;
	public static readonly CHARSTRING = 58;
	public static readonly LONGSTRING = 59;
	public static readonly INT = 60;
	public static readonly HEX = 61;
	public static readonly FLOAT = 62;
	public static readonly HEX_FLOAT = 63;
	public static readonly COMMENT = 64;
	public static readonly WS = 65;
	public static readonly NL = 66;
	public static readonly SHEBANG = 67;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_start_ = 0;
	public static readonly RULE_chunk = 1;
	public static readonly RULE_block = 2;
	public static readonly RULE_stat = 3;
	public static readonly RULE_attnamelist = 4;
	public static readonly RULE_attrib = 5;
	public static readonly RULE_retstat = 6;
	public static readonly RULE_label = 7;
	public static readonly RULE_funcname = 8;
	public static readonly RULE_varlist = 9;
	public static readonly RULE_namelist = 10;
	public static readonly RULE_explist = 11;
	public static readonly RULE_exp = 12;
	public static readonly RULE_var = 13;
	public static readonly RULE_prefixexp = 14;
	public static readonly RULE_functioncall = 15;
	public static readonly RULE_args = 16;
	public static readonly RULE_functiondef = 17;
	public static readonly RULE_funcbody = 18;
	public static readonly RULE_parlist = 19;
	public static readonly RULE_tableconstructor = 20;
	public static readonly RULE_fieldlist = 21;
	public static readonly RULE_field = 22;
	public static readonly RULE_fieldsep = 23;
	public static readonly RULE_number = 24;
	public static readonly RULE_string = 25;
	public static readonly literalNames: (string | null)[] = [ null, "';'", 
                                                            "'='", "'break'", 
                                                            "'goto'", "'do'", 
                                                            "'end'", "'while'", 
                                                            "'repeat'", 
                                                            "'until'", "'if'", 
                                                            "'then'", "'elseif'", 
                                                            "'else'", "'for'", 
                                                            "','", "'in'", 
                                                            "'function'", 
                                                            "'local'", "'<'", 
                                                            "'>'", "'return'", 
                                                            "'::'", "'nil'", 
                                                            "'false'", "'true'", 
                                                            "'.'", "'~'", 
                                                            "'-'", "'#'", 
                                                            "'('", "')'", 
                                                            "'not'", "'<<'", 
                                                            "'>>'", "'&'", 
                                                            "'//'", "'%'", 
                                                            "':'", "'<='", 
                                                            "'>='", "'and'", 
                                                            "'or'", "'+'", 
                                                            "'*'", "'{'", 
                                                            "'}'", "'['", 
                                                            "']'", "'=='", 
                                                            "'..'", "'|'", 
                                                            "'^'", "'/'", 
                                                            "'...'", "'~='" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "SEMI", 
                                                             "EQ", "BREAK", 
                                                             "GOTO", "DO", 
                                                             "END", "WHILE", 
                                                             "REPEAT", "UNTIL", 
                                                             "IF", "THEN", 
                                                             "ELSEIF", "ELSE", 
                                                             "FOR", "COMMA", 
                                                             "IN", "FUNCTION", 
                                                             "LOCAL", "LT", 
                                                             "GT", "RETURN", 
                                                             "CC", "NIL", 
                                                             "FALSE", "TRUE", 
                                                             "DOT", "SQUIG", 
                                                             "MINUS", "POUND", 
                                                             "OP", "CP", 
                                                             "NOT", "LL", 
                                                             "GG", "AMP", 
                                                             "SS", "PER", 
                                                             "COL", "LE", 
                                                             "GE", "AND", 
                                                             "OR", "PLUS", 
                                                             "STAR", "OCU", 
                                                             "CCU", "OB", 
                                                             "CB", "EE", 
                                                             "DD", "PIPE", 
                                                             "CARET", "SLASH", 
                                                             "DDD", "SQEQ", 
                                                             "NAME", "NORMALSTRING", 
                                                             "CHARSTRING", 
                                                             "LONGSTRING", 
                                                             "INT", "HEX", 
                                                             "FLOAT", "HEX_FLOAT", 
                                                             "COMMENT", 
                                                             "WS", "NL", 
                                                             "SHEBANG" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"start_", "chunk", "block", "stat", "attnamelist", "attrib", "retstat", 
		"label", "funcname", "varlist", "namelist", "explist", "exp", "var", "prefixexp", 
		"functioncall", "args", "functiondef", "funcbody", "parlist", "tableconstructor", 
		"fieldlist", "field", "fieldsep", "number", "string",
	];
	public get grammarFileName(): string { return "LuaParser.g4"; }
	public get literalNames(): (string | null)[] { return LuaParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return LuaParser.symbolicNames; }
	public get ruleNames(): string[] { return LuaParser.ruleNames; }
	public get serializedATN(): number[] { return LuaParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, LuaParser._ATN, LuaParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public start_(): Start_Context {
		let localctx: Start_Context = new Start_Context(this, this._ctx, this.state);
		this.enterRule(localctx, 0, LuaParser.RULE_start_);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 52;
			this.chunk();
			this.state = 53;
			this.match(LuaParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public chunk(): ChunkContext {
		let localctx: ChunkContext = new ChunkContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, LuaParser.RULE_chunk);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 55;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let localctx: BlockContext = new BlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, LuaParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 60;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1078347194) !== 0) || _la===56) {
				{
				{
				this.state = 57;
				this.stat();
				}
				}
				this.state = 62;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 64;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===21) {
				{
				this.state = 63;
				this.retstat();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public stat(): StatContext {
		let localctx: StatContext = new StatContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, LuaParser.RULE_stat);
		let _la: number;
		try {
			this.state = 147;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				localctx = new Stat_no_opContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 66;
				this.match(LuaParser.SEMI);
				}
				break;
			case 2:
				localctx = new Stat_assing_varsContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 67;
				this.varlist();
				this.state = 68;
				this.match(LuaParser.EQ);
				this.state = 69;
				this.explist();
				}
				break;
			case 3:
				localctx = new Stat_function_callContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 71;
				this.functioncall(0);
				}
				break;
			case 4:
				localctx = new Stat_labelContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 72;
				this.label();
				}
				break;
			case 5:
				localctx = new Stat_breakContext(this, localctx);
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 73;
				this.match(LuaParser.BREAK);
				}
				break;
			case 6:
				localctx = new Stat_gotoContext(this, localctx);
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 74;
				this.match(LuaParser.GOTO);
				this.state = 75;
				this.match(LuaParser.NAME);
				}
				break;
			case 7:
				localctx = new Stat_doContext(this, localctx);
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 76;
				this.match(LuaParser.DO);
				this.state = 77;
				this.block();
				this.state = 78;
				this.match(LuaParser.END);
				}
				break;
			case 8:
				localctx = new Stat_whileContext(this, localctx);
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 80;
				this.match(LuaParser.WHILE);
				this.state = 81;
				this.exp(0);
				this.state = 82;
				this.match(LuaParser.DO);
				this.state = 83;
				this.block();
				this.state = 84;
				this.match(LuaParser.END);
				}
				break;
			case 9:
				localctx = new Stat_repeatContext(this, localctx);
				this.enterOuterAlt(localctx, 9);
				{
				this.state = 86;
				this.match(LuaParser.REPEAT);
				this.state = 87;
				this.block();
				this.state = 88;
				this.match(LuaParser.UNTIL);
				this.state = 89;
				this.exp(0);
				}
				break;
			case 10:
				localctx = new Stat_ifContext(this, localctx);
				this.enterOuterAlt(localctx, 10);
				{
				this.state = 91;
				this.match(LuaParser.IF);
				this.state = 92;
				this.exp(0);
				this.state = 93;
				this.match(LuaParser.THEN);
				this.state = 94;
				this.block();
				this.state = 102;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===12) {
					{
					{
					this.state = 95;
					this.match(LuaParser.ELSEIF);
					this.state = 96;
					this.exp(0);
					this.state = 97;
					this.match(LuaParser.THEN);
					this.state = 98;
					this.block();
					}
					}
					this.state = 104;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 107;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===13) {
					{
					this.state = 105;
					this.match(LuaParser.ELSE);
					this.state = 106;
					this.block();
					}
				}

				this.state = 109;
				this.match(LuaParser.END);
				}
				break;
			case 11:
				localctx = new Stat_for_varContext(this, localctx);
				this.enterOuterAlt(localctx, 11);
				{
				this.state = 111;
				this.match(LuaParser.FOR);
				this.state = 112;
				this.match(LuaParser.NAME);
				this.state = 113;
				this.match(LuaParser.EQ);
				this.state = 114;
				this.exp(0);
				this.state = 115;
				this.match(LuaParser.COMMA);
				this.state = 116;
				this.exp(0);
				this.state = 119;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===15) {
					{
					this.state = 117;
					this.match(LuaParser.COMMA);
					this.state = 118;
					this.exp(0);
					}
				}

				this.state = 121;
				this.match(LuaParser.DO);
				this.state = 122;
				this.block();
				this.state = 123;
				this.match(LuaParser.END);
				}
				break;
			case 12:
				localctx = new Stat_for_listContext(this, localctx);
				this.enterOuterAlt(localctx, 12);
				{
				this.state = 125;
				this.match(LuaParser.FOR);
				this.state = 126;
				this.namelist();
				this.state = 127;
				this.match(LuaParser.IN);
				this.state = 128;
				this.explist();
				this.state = 129;
				this.match(LuaParser.DO);
				this.state = 130;
				this.block();
				this.state = 131;
				this.match(LuaParser.END);
				}
				break;
			case 13:
				localctx = new Stat_functionContext(this, localctx);
				this.enterOuterAlt(localctx, 13);
				{
				this.state = 133;
				this.match(LuaParser.FUNCTION);
				this.state = 134;
				this.funcname();
				this.state = 135;
				this.funcbody();
				}
				break;
			case 14:
				localctx = new Stat_local_functionContext(this, localctx);
				this.enterOuterAlt(localctx, 14);
				{
				this.state = 137;
				this.match(LuaParser.LOCAL);
				this.state = 138;
				this.match(LuaParser.FUNCTION);
				this.state = 139;
				this.match(LuaParser.NAME);
				this.state = 140;
				this.funcbody();
				}
				break;
			case 15:
				localctx = new Stat_local_attnamelistContext(this, localctx);
				this.enterOuterAlt(localctx, 15);
				{
				this.state = 141;
				this.match(LuaParser.LOCAL);
				this.state = 142;
				this.attnamelist();
				this.state = 145;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===2) {
					{
					this.state = 143;
					this.match(LuaParser.EQ);
					this.state = 144;
					this.explist();
					}
				}

				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public attnamelist(): AttnamelistContext {
		let localctx: AttnamelistContext = new AttnamelistContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, LuaParser.RULE_attnamelist);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 149;
			this.match(LuaParser.NAME);
			this.state = 150;
			this.attrib();
			this.state = 156;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===15) {
				{
				{
				this.state = 151;
				this.match(LuaParser.COMMA);
				this.state = 152;
				this.match(LuaParser.NAME);
				this.state = 153;
				this.attrib();
				}
				}
				this.state = 158;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public attrib(): AttribContext {
		let localctx: AttribContext = new AttribContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, LuaParser.RULE_attrib);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 162;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===19) {
				{
				this.state = 159;
				this.match(LuaParser.LT);
				this.state = 160;
				this.match(LuaParser.NAME);
				this.state = 161;
				this.match(LuaParser.GT);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public retstat(): RetstatContext {
		let localctx: RetstatContext = new RetstatContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, LuaParser.RULE_retstat);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 164;
			this.match(LuaParser.RETURN);
			this.state = 166;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2072117248) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 4282392577) !== 0)) {
				{
				this.state = 165;
				this.explist();
				}
			}

			this.state = 169;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===1) {
				{
				this.state = 168;
				this.match(LuaParser.SEMI);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public label(): LabelContext {
		let localctx: LabelContext = new LabelContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, LuaParser.RULE_label);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 171;
			this.match(LuaParser.CC);
			this.state = 172;
			this.match(LuaParser.NAME);
			this.state = 173;
			this.match(LuaParser.CC);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public funcname(): FuncnameContext {
		let localctx: FuncnameContext = new FuncnameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, LuaParser.RULE_funcname);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 175;
			this.match(LuaParser.NAME);
			this.state = 180;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===26) {
				{
				{
				this.state = 176;
				this.match(LuaParser.DOT);
				this.state = 177;
				this.match(LuaParser.NAME);
				}
				}
				this.state = 182;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 185;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===38) {
				{
				this.state = 183;
				this.match(LuaParser.COL);
				this.state = 184;
				this.match(LuaParser.NAME);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public varlist(): VarlistContext {
		let localctx: VarlistContext = new VarlistContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, LuaParser.RULE_varlist);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 187;
			this.var_();
			this.state = 192;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===15) {
				{
				{
				this.state = 188;
				this.match(LuaParser.COMMA);
				this.state = 189;
				this.var_();
				}
				}
				this.state = 194;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public namelist(): NamelistContext {
		let localctx: NamelistContext = new NamelistContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, LuaParser.RULE_namelist);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 195;
			this.match(LuaParser.NAME);
			this.state = 200;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 14, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 196;
					this.match(LuaParser.COMMA);
					this.state = 197;
					this.match(LuaParser.NAME);
					}
					}
				}
				this.state = 202;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 14, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public explist(): ExplistContext {
		let localctx: ExplistContext = new ExplistContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, LuaParser.RULE_explist);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 203;
			this.exp(0);
			this.state = 208;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===15) {
				{
				{
				this.state = 204;
				this.match(LuaParser.COMMA);
				this.state = 205;
				this.exp(0);
				}
				}
				this.state = 210;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public exp(): ExpContext;
	public exp(_p: number): ExpContext;
	// @RuleVersion(0)
	public exp(_p?: number): ExpContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: ExpContext = new ExpContext(this, this._ctx, _parentState);
		let _prevctx: ExpContext = localctx;
		let _startState: number = 24;
		this.enterRecursionRule(localctx, 24, LuaParser.RULE_exp, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 223;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 23:
				{
				localctx = new Exp_nilContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
